Expanded Enum Alignment glitching #37047

Closed
opened 2013-10-11 20:57:40 +02:00 by CodeManX · 4 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7

- Blender version with error, and version that worked ---

2.69 RC1

- Short description of error ---

As you change the SpaceNodeEditor.tree_type, some icons lose their aligned appearence - and get it back if you leave them with your beloved mouse.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Click the icons in compositor and see.

Video: http://youtu.be/ZvTuuHSwxWQ (used hive branch, but happens in vanilla too)

Could be related to
https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=59434%%%

%%%--- Operating System, Graphics card --- Windows 7 - Blender version with error, and version that worked --- 2.69 RC1 - Short description of error --- As you change the SpaceNodeEditor.tree_type, some icons lose their aligned appearence - and get it back if you leave them with your beloved mouse. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Click the icons in compositor and see. Video: http://youtu.be/ZvTuuHSwxWQ (used hive branch, but happens in vanilla too) Could be related to https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=59434%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Issue is already present in 2.68a (something like 58534)… ;)

Anyway, this is a pretty common layout call, and I could not find that issue anywhere else (e.g. sequencer header), so my wild guess currently is rather something like a data update issue…%%%

%%%Issue is already present in 2.68a (something like 58534)… ;) Anyway, this is a pretty common layout call, and I could not find that issue anywhere else (e.g. sequencer header), so my wild guess currently is rather something like a data update issue…%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37047
No description provided.